# alpha-mind

./: .dockerignore  .gitignore  CLAUDE.md  README.md
backend/agent-orchestrator/: agent-orchestrator.cabal
backend/agent-orchestrator/src/: Main.hs
backend/agent-orchestrator/src/Domain/: HypothesisOrchestration.hs
backend/agent-orchestrator/src/Presentation/: Api.hs  AppM.hs  PubSubHandler.hs
backend/agent-orchestrator/test/: Main.hs
backend/agent-orchestrator/test/Presentation/: PubSubHandlerSpec.hs
backend/audit-log/: audit-log.cabal
backend/audit-log/app/: Main.hs
backend/audit-log/src/: Main.hs
backend/audit-log/src/Domain/: AuditLog.hs
backend/audit-log/src/Presentation/: Api.hs  AppM.hs  PubSubHandler.hs
backend/audit-log/src/UseCase/: QueryAuditLogByIdentifier.hs  QueryAuditLogs.hs  RecordAuditFromSourceEvent.hs
backend/audit-log/test/: Main.hs
backend/audit-log/test/Domain/: AuditLogSpec.hs
backend/audit-log/test/Presentation/: AppMSpec.hs  IntegrationSpec.hs  PubSubHandlerSpec.hs
backend/audit-log/test/UseCase/: QueryAuditLogByIdentifierSpec.hs  QueryAuditLogsSpec.hs  RecordAuditFromSourceEventSpec.hs
backend/bff/: bff.cabal
backend/bff/src/: Main.hs
backend/bff/src/Presentation/: Api.hs  AppM.hs
backend/bff/test/: Main.hs
backend/common/python/: pyproject.toml
backend/common/python/tests/: conftest.py  test_env.py  test_gs_uri.py  test_pubsub_push.py  test_retry.py
backend/data-collector/: data-collector.cabal
backend/data-collector/src/: Main.hs
backend/data-collector/src/Domain/: MarketCollection.hs
backend/data-collector/src/Presentation/: Api.hs  AppM.hs  PubSubHandler.hs
backend/data-collector/src/UseCase/: CollectMarketData.hs  RecordCollectionAudit.hs
backend/data-collector/test/: Main.hs
backend/data-collector/test/Domain/: MarketCollectionSpec.hs
backend/data-collector/test/Presentation/: PubSubHandlerSpec.hs
backend/data-collector/test/UseCase/: CollectMarketDataSpec.hs
backend/execution/: execution.cabal
backend/execution/app/: Main.hs
backend/execution/src/: Main.hs
backend/execution/src/Domain/: OrderExecution.hs
backend/execution/src/Presentation/: Api.hs  AppM.hs  PubSubHandler.hs
backend/execution/src/UseCase/: CompleteDemoRun.hs  ExecuteOrder.hs
backend/execution/test/: Main.hs
backend/execution/test/Presentation/: PubSubHandlerSpec.hs
backend/execution/test/UseCase/: CompleteDemoRunSpec.hs  ExecuteOrderSpec.hs
backend/feature-engineering/: .gitignore  pyproject.toml
backend/feature-engineering/src/: main.py
backend/feature-engineering/src/application/: __init__.py  feature_generation_service.py
backend/feature-engineering/src/infrastructure/: error.py
backend/feature-engineering/src/presentation/: app_factory.py  cloud_event_decoder.py  dependency_container.py  health.py  logging_audit_writer.py  subscriber.py
backend/feature-engineering/src/usecase/: event_publisher.py  feature_audit_writer.py  feature_generation_service.py
backend/feature-engineering/tests/: conftest.py  test_main.py
backend/feature-engineering/tests/integration/: conftest.py  helpers.py  run_pubsub_docker_checks.py  test_feature_engineering_integration.py
backend/feature-engineering/tests/presentation/: test_app_factory.py  test_cloud_event_decoder.py  test_dependency_container.py  test_health.py  test_logging_audit_writer.py  test_subscriber.py
backend/feature-engineering/tests/usecase/: test_feature_generation_service.py
backend/hypothesis-lab/: pyproject.toml  requirements.txt
backend/hypothesis-lab/src/: main.py
backend/hypothesis-lab/src/application/: __init__.py  failure_knowledge_service.py  hypothesis_workflow_service.py
backend/hypothesis-lab/src/presentation/: app_factory.py  cloud_event_decoder.py  dependency_container.py  health.py  logging_audit_writer.py  subscriber.py
backend/hypothesis-lab/tests/: conftest.py  test_main.py
backend/hypothesis-lab/tests/application/: test_failure_knowledge_service.py  test_hypothesis_workflow_service.py
backend/hypothesis-lab/tests/presentation/: test_app_factory.py  test_cloud_event_decoder.py  test_dependency_container.py  test_subscriber.py
backend/insight-collector/: insight-collector.cabal
backend/insight-collector/src/: Main.hs
backend/insight-collector/src/Domain/: InsightCollection.hs
backend/insight-collector/src/Presentation/: Api.hs  AppM.hs  PubSubHandler.hs
backend/insight-collector/src/UseCase/: CollectInsights.hs  RecordInsightAudit.hs
backend/insight-collector/test/: Main.hs
backend/insight-collector/test/Presentation/: PubSubHandlerSpec.hs
backend/insight-collector/test/UseCase/: CollectInsightsSpec.hs
backend/portfolio-planner/: portfolio-planner.cabal
backend/portfolio-planner/src/: Main.hs
backend/portfolio-planner/src/Domain/: OrderProposal.hs
backend/portfolio-planner/src/Presentation/: Api.hs  AppM.hs  PubSubHandler.hs
backend/portfolio-planner/src/UseCase/: PortfolioPlanningService.hs  ProposalAuditWriter.hs
backend/portfolio-planner/test/: Main.hs
backend/portfolio-planner/test/Presentation/: PubSubHandlerSpec.hs
backend/portfolio-planner/test/UseCase/: PortfolioPlanningServiceSpec.hs  ProposalAuditWriterSpec.hs
backend/risk-guard/: risk-guard.cabal
backend/risk-guard/src/: Main.hs
backend/risk-guard/src/Domain/: RiskAssessment.hs
backend/risk-guard/src/Presentation/: Api.hs  AppM.hs
backend/risk-guard/src/UseCase/: CheckOrderRisk.hs  SyncKillSwitch.hs
backend/risk-guard/test/: Main.hs
backend/risk-guard/test/UseCase/: CheckOrderRiskSpec.hs  SyncKillSwitchSpec.hs
backend/signal-generator/: .gitignore  Dockerfile  docker-compose.integration.yml  pyproject.toml  requirements.txt
backend/signal-generator/scripts/: run-integration-tests.sh
backend/signal-generator/src/: main.py
backend/signal-generator/tests/: conftest.py  test_main.py
backend/signal-generator/tests/infrastructure/: test_retry.py
backend/signal-generator/tests/integration/: __init__.py  conftest.py  pytest.ini  test_sg_it_001_health_check.py  test_sg_it_002_normal_inference.py  (+3 more)
(+1348 files in other folders)
