cabal-version: 3.0
name:          agent-orchestrator
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.HypothesisOrchestration
    Domain.HypothesisOrchestration.Aggregate
    Domain.HypothesisOrchestration.CodeReferenceTemplate
    Domain.HypothesisOrchestration.DispatchFactory
    Domain.HypothesisOrchestration.DuplicateSuppressionPolicy
    Domain.HypothesisOrchestration.DuplicateThresholdSpecification
    Domain.HypothesisOrchestration.Error
    Domain.HypothesisOrchestration.Event
    Domain.HypothesisOrchestration.FailureKnowledge
    Domain.HypothesisOrchestration.GenerationContextResolutionPolicy
    Domain.HypothesisOrchestration.HypothesisProposalFactory
    Domain.HypothesisOrchestration.HypothesisReport
    Domain.HypothesisOrchestration.InstructionProfile
    Domain.HypothesisOrchestration.NonRetryableReasonSpecification
    Domain.HypothesisOrchestration.OrchestrationDispatch
    Domain.HypothesisOrchestration.ProposalPayloadIntegritySpecification
    Domain.HypothesisOrchestration.ReasonCode
    Domain.HypothesisOrchestration.SkillExecutor
    Domain.HypothesisOrchestration.SkillRegistry
    Domain.HypothesisOrchestration.ValueObjects
    Infrastructure.ACL.SkillExecutorT
    Infrastructure.Firestore.CodeReferenceTemplateRepository
    Infrastructure.Firestore.Env
    Infrastructure.Firestore.FailureKnowledgeRepository
    Infrastructure.Firestore.HypothesisProposalRepository
    Infrastructure.Firestore.InstructionProfileRepository
    Infrastructure.Firestore.OrchestrationDispatchRepository
    Infrastructure.Firestore.SkillRegistryRepository
    Infrastructure.PubSub.HypothesisEventPublisher
    Presentation.AppM
    Presentation.Api
    Presentation.PubSubHandler
    UseCase.HypothesisOrchestration.DispatchService
    UseCase.HypothesisOrchestration.FailureKnowledgeRegistrar
    UseCase.HypothesisOrchestration.HypothesisOrchestrationService
  build-depends:
    aeson          ^>=2.2,
    base64         ^>=1.0,
    bytestring     ^>=0.12,
    gogol-firestore ^>=1.0.0,
    http-client    ^>=0.7,
    http-client-tls ^>=0.3,
    http-types     ^>=0.12,
    mtl            ^>=2.3.1,
    servant-server ^>=0.20,
    shared,
    text           ^>=2.1.4,
    time           ^>=1.14,
    transformers   ^>=0.6.1.2,
    ulid           ^>=0.3.3,
    unordered-containers ^>=0.2

executable agent-orchestrator
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    agent-orchestrator,
    aeson                ^>=2.2,
    base64               ^>=1.0,
    bytestring           ^>=0.12,
    gogol-firestore      ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    http-types           ^>=0.12,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2,
    warp                 ^>=3.4

test-suite agent-orchestrator-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    agent-orchestrator,
    aeson                ^>=2.2,
    base64               ^>=1.0,
    bytestring           ^>=0.12,
    gogol-firestore      ^>=1.0.0,
    hspec                ^>=2.11.16,
    http-client          ^>=0.7,
    http-types           ^>=0.12,
    mtl                  ^>=2.3,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2
  other-modules:
    Domain.HypothesisOrchestration.AggregateSpec
    Domain.HypothesisOrchestration.DuplicateThresholdSpecificationSpec
    Domain.HypothesisOrchestration.GenerationContextResolutionPolicySpec
    Domain.HypothesisOrchestration.NonRetryableReasonSpecificationSpec
    Domain.HypothesisOrchestration.OrchestrationDispatchSpec
    Domain.HypothesisOrchestration.ReasonCodeSpec
    Domain.HypothesisOrchestration.ValueObjectsSpec
    Infrastructure.ACL.SkillExecutorTSpec
    Infrastructure.Firestore.CodeReferenceTemplateRepositorySpec
    Infrastructure.Firestore.FailureKnowledgeRepositorySpec
    Infrastructure.Firestore.HypothesisProposalRepositorySpec
    Infrastructure.Firestore.InstructionProfileRepositorySpec
    Infrastructure.Firestore.OrchestrationDispatchRepositorySpec
    Infrastructure.Firestore.SkillRegistryRepositorySpec
    Infrastructure.PubSub.HypothesisEventPublisherSpec
    Presentation.PubSubHandlerSpec
    UseCase.HypothesisOrchestration.DispatchServiceSpec
    UseCase.HypothesisOrchestration.FailureKnowledgeRegistrarSpec
    UseCase.HypothesisOrchestration.HypothesisOrchestrationServiceSpec
