cabal-version: 3.0
name:          audit-log
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.18 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.AuditLog
    Domain.AuditLog.AuditIngestion
    Domain.AuditLog.AuditRecord
    Domain.AuditLog.ReasonCode
    Domain.AuditLog.ReasonSource
    Domain.AuditLog.Result
    Domain.AuditLog.Status
  build-depends:
    aeson      >=2.2  && <3,
    containers ^>=0.7,
    text       ^>=2.1.4,
    time       ^>=1.14,
    ulid       ^>=0.3.3

executable audit-log
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    audit-log,
    servant-server >=0.20 && <1,
    warp           >=3.4  && <4,
    aeson          >=2.2  && <3

test-suite audit-log-test
  import: shared
  type:     exitcode-stdio-1.0
  main-is:  Main.hs
  hs-source-dirs: test
  build-depends:
    audit-log,
    aeson ^>=2.2.3.0,
    containers ^>=0.7,
    base64 ^>=1.0,
    base ^>=4.21.0.0,
    bytestring ^>=0.12.2.0,
    gogol ^>=1.0.0.0,
    gogol-firestore ^>=1.0.0,
    hspec ^>=2.11.16,
    hspec-wai ^>=0.11.1,
    http-types ^>=0.12.4,
    servant-server ^>=0.20.3.0,
    shared,
    text ^>=2.1.4,
    time ^>=1.14,
    ulid ^>=0.3.3.0,
    unordered-containers ^>=0.2.21,
    wai ^>=3.2.4,
    wai-extra ^>=3.1.18
  other-modules:
    Domain.AuditLog.AuditIngestionSpec
    Domain.AuditLog.AuditRecordSpec
    Domain.AuditLog.ReasonCodeSpec
    Domain.AuditLog.ReasonSourceSpec
    Domain.AuditLog.ResultSpec
    Domain.AuditLog.StatusSpec
    Domain.AuditLogSpec
