cabal-version: 3.0
name:          audit-log
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.AuditLog
    Domain.AuditLog.AuditIngestion
    Domain.AuditLog.AuditRecord
    Domain.AuditLog.AuditRecordFactory
    Domain.AuditLog.Error
    Domain.AuditLog.ReasonCode
    Domain.AuditLog.ReasonSource
    Domain.AuditLog.Result
    Domain.AuditLog.ServicePolicy
    Domain.AuditLog.Specification
    Domain.AuditLog.Status
    Infrastructure.Repository.FirestoreAuditIngestionRepository
    Infrastructure.Repository.FirestoreAuditRecordRepository
    Presentation.Api
    Presentation.AppM
    Presentation.PubSubHandler
    UseCase.QueryAuditLogByIdentifier
    UseCase.QueryAuditLogs
    UseCase.RecordAuditFromSourceEvent
  build-depends:
    aeson               >=2.2  && <3,
    bytestring          ^>=0.12,
    containers          ^>=0.7,
    gogol-firestore     ^>=1.0.0,
    http-client-tls     ^>=0.3,
    servant-server      >=0.20 && <1,
    shared,
    text                ^>=2.1.4,
    time                ^>=1.14,
    transformers        ^>=0.6.1.2,
    ulid                ^>=0.3.3,
    unordered-containers ^>=0.2.21,
    warp                >=3.4  && <4

executable audit-log
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    audit-log,
    shared

test-suite audit-log-test
  import: shared
  type:     exitcode-stdio-1.0
  main-is:  Main.hs
  hs-source-dirs: test
  build-depends:
    audit-log,
    aeson                ^>=2.2.3.0,
    base64               ^>=1.0,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    hspec                ^>=2.11.16,
    hspec-wai            ^>=0.11.1,
    http-client          ^>=0.7,
    http-types           ^>=0.12,
    servant-server       >=0.20 && <1,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    ulid                 ^>=0.3.3.0,
    unordered-containers ^>=0.2.21,
    wai                  ^>=3.2,
    wai-extra            ^>=3.1
  other-modules:
    Domain.AuditLog.AuditIngestionSpec
    Domain.AuditLog.AuditRecordFactorySpec
    Domain.AuditLog.AuditRecordSpec
    Domain.AuditLog.ReasonCodeSpec
    Domain.AuditLog.ReasonSourceSpec
    Domain.AuditLog.ResultSpec
    Domain.AuditLog.ServicePolicySpec
    Domain.AuditLog.SpecificationSpec
    Domain.AuditLog.StatusSpec
    Domain.AuditLogSpec
    Infrastructure.Repository.FirestoreAuditIngestionRepositorySpec
    Infrastructure.Repository.FirestoreAuditRecordRepositorySpec
    Infrastructure.Repository.IntegrationSpec
    Presentation.AppMSpec
    Presentation.PubSubHandlerSpec
    Presentation.IntegrationSpec
    UseCase.QueryAuditLogByIdentifierSpec
    UseCase.QueryAuditLogsSpec
    UseCase.RecordAuditFromSourceEventSpec
