cabal-version: 3.0
name:          bff
version:       0.1.0.0
build-type:    Simple

common shared
  default-language:   GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:        -Wall
  build-depends:      base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.Audit.Log
    Domain.Auth.Credential
    Domain.Compliance.Controls
    Domain.Dashboard.Summary
    Domain.Hypothesis.Record
    Domain.Insight.Record
    Domain.Order.Order
    Domain.Settings.Strategy
    Infrastructure.JWT.JwtIssuer
    Infrastructure.JWT.JwtVerifier
    Infrastructure.Repository.FirestoreAuditRepository
    Infrastructure.Repository.FirestoreHypothesisRepository
    Infrastructure.Repository.FirestoreInsightRepository
    Infrastructure.Repository.FirestoreOperationsRepository
    Infrastructure.Repository.FirestoreOrderRepository
    Infrastructure.Repository.FirestoreSettingsRepository
    Infrastructure.Repository.FirestoreUserRepository
    Presentation.Api
    Presentation.AppM
    Presentation.Handler.Audit
    Presentation.Handler.Auth
    Presentation.Handler.Dashboard
    Presentation.Handler.Hypotheses
    Presentation.Handler.Insights
    Presentation.Handler.Orders
    Presentation.Handler.Settings
  build-depends:
    aeson                ^>=2.2,
    bytestring           ^>=0.12,
    gogol-firestore      ^>=1.0.0,
    http-types           ^>=0.12,
    jose-jwt             ^>=0.10.0,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21

executable bff
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Domain.Audit.Log
    Domain.Auth.Credential
    Domain.Compliance.Controls
    Domain.Dashboard.Summary
    Domain.Hypothesis.Record
    Domain.Insight.Record
    Domain.Order.Order
    Domain.Settings.Strategy
    Infrastructure.JWT.JwtIssuer
    Infrastructure.JWT.JwtVerifier
    Infrastructure.Repository.FirestoreAuditRepository
    Infrastructure.Repository.FirestoreHypothesisRepository
    Infrastructure.Repository.FirestoreInsightRepository
    Infrastructure.Repository.FirestoreOperationsRepository
    Infrastructure.Repository.FirestoreOrderRepository
    Infrastructure.Repository.FirestoreSettingsRepository
    Infrastructure.Repository.FirestoreUserRepository
    Presentation.Api
    Presentation.AppM
    Presentation.Handler.Audit
    Presentation.Handler.Auth
    Presentation.Handler.Dashboard
    Presentation.Handler.Hypotheses
    Presentation.Handler.Insights
    Presentation.Handler.Orders
    Presentation.Handler.Settings
  build-depends:
    aeson                ^>=2.2,
    bff,
    bytestring           ^>=0.12,
    gogol-firestore      ^>=1.0.0,
    http-types           ^>=0.12,
    jose-jwt             ^>=0.10.0,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21

test-suite bff-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    aeson          ^>=2.2,
    bff,
    bytestring     ^>=0.12,
    hspec          ^>=2.11.16,
    http-types     ^>=0.12,
    servant-server ^>=0.20,
    shared,
    text           ^>=2.1.4,
    time           ^>=1.14,
    wai            ^>=3.2.4,
    wai-extra      ^>=3.1
  other-modules:
    Domain.Auth.CredentialSpec
    Presentation.Handler.AuditSpec
    Presentation.Handler.AuthSpec
    Presentation.Handler.DashboardSpec
    Presentation.Handler.HypothesesSpec
    Presentation.Handler.InsightsSpec
    Presentation.Handler.OrdersSpec
    Presentation.Handler.SettingsSpec
