cabal-version: 3.0
name:          data-collector
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.MarketCollection
    Domain.MarketCollection.Aggregate
    Domain.MarketCollection.CollectionDispatch
    Domain.MarketCollection.CollectionQualityPolicy
    Domain.MarketCollection.Error
    Domain.MarketCollection.MarketDataSource
    Domain.MarketCollection.ReasonCode
    Domain.MarketCollection.SourcePolicySpecificationService
  build-depends:
    text      ^>=2.1.4,
    time      ^>=1.14,
    ulid      ^>=0.3.3

executable data-collector
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    data-collector,
    aeson          >=2.2 && <3,
    servant-server >=0.20 && <1,
    warp           >=3.4 && <4

test-suite data-collector-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    data-collector,
    hspec     ^>=2.11.16,
    time      ^>=1.14,
    ulid      ^>=0.3.3
  other-modules:
    Domain.MarketCollection.AggregateSpec
    Domain.MarketCollection.CollectionDispatchSpec
    Domain.MarketCollection.CollectionQualityPolicySpec
    Domain.MarketCollection.ReasonCodeSpec
    Domain.MarketCollection.SourcePolicySpecificationServiceSpec
    Domain.MarketCollectionSpec
