cabal-version: 3.0
name:          data-collector
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:    base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.MarketCollection
    Domain.MarketCollection.Aggregate
    Domain.MarketCollection.CollectionDispatch
    Domain.MarketCollection.CollectionQualityPolicy
    Domain.MarketCollection.Error
    Domain.MarketCollection.MarketDataSource
    Domain.MarketCollection.ReasonCode
    Domain.MarketCollection.SourcePolicySpecificationService
    Infrastructure.ACL.AlpacaMarketDataSourceT
    Infrastructure.ACL.JQuantsMarketDataSourceT
    Infrastructure.ACL.NisshokinCsvSourceAdapter
    Infrastructure.Idempotency.CollectionIdempotency
    Infrastructure.Logging.CloudLoggingCollectionAuditWriter
    Infrastructure.Normalization.MarketDataNormalizer
    Infrastructure.Publisher.PubSubCollectionEventPublisher
    Infrastructure.Repository.FirestoreCollectionDispatchRepository
    Infrastructure.Repository.FirestoreMarketCollectionRepository
    Infrastructure.Repository.GcsMarketDataRepository
    Infrastructure.Wire.ReasonCodeWire
    Presentation.Api
    Presentation.AppM
    Presentation.PubSubHandler
    UseCase.CollectMarketData
    UseCase.RecordCollectionAudit
  build-depends:
    aeson                ^>=2.2,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    gogol-storage        ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    http-types           ^>=0.12,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21

executable data-collector
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    data-collector,
    shared,
    aeson                ^>=2.2,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    gogol-storage        ^>=1.0.0,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    http-types           ^>=0.12,
    mtl                  ^>=2.3.1,
    servant-server       ^>=0.20,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21

test-suite data-collector-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    data-collector,
    aeson                ^>=2.2,
    base64               ^>=1.0,
    bytestring           ^>=0.12,
    containers           ^>=0.7,
    gogol-firestore      ^>=1.0.0,
    hspec                ^>=2.11.16,
    http-client          ^>=0.7,
    http-client-tls      ^>=0.3,
    http-types           ^>=0.12,
    servant-server       ^>=0.20,
    shared,
    text                 ^>=2.1.4,
    time                 ^>=1.14,
    transformers         ^>=0.6.1.2,
    ulid                 ^>=0.3.3,
    unordered-containers ^>=0.2.21
  other-modules:
    Domain.MarketCollection.AggregateSpec
    Domain.MarketCollection.CollectionDispatchSpec
    Domain.MarketCollection.CollectionQualityPolicySpec
    Domain.MarketCollection.ReasonCodeSpec
    Domain.MarketCollection.SourcePolicySpecificationServiceSpec
    Domain.MarketCollectionSpec
    Infrastructure.ACL.AlpacaMarketDataSourceTSpec
    Infrastructure.ACL.JQuantsMarketDataSourceTSpec
    Infrastructure.ACL.NisshokinCsvSourceAdapterSpec
    Infrastructure.Idempotency.CollectionIdempotencySpec
    Infrastructure.Logging.CloudLoggingCollectionAuditWriterSpec
    Infrastructure.Normalization.MarketDataNormalizerSpec
    Infrastructure.Publisher.PubSubCollectionEventPublisherSpec
    Infrastructure.Repository.FirestoreCodecSpec
    Infrastructure.Repository.FirestoreCollectionDispatchRepositorySpec
    Infrastructure.Repository.FirestoreMarketCollectionRepositorySpec
    Infrastructure.Repository.GcsMarketDataRepositorySpec
    Presentation.PubSubHandlerSpec
    UseCase.CollectMarketDataSpec
