cabal-version: 3.0
name:          execution
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options: -Wall
  build-depends: base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.OrderExecution
    Domain.OrderExecution.Aggregate
    Domain.OrderExecution.BrokerExecutionPolicy
    Domain.OrderExecution.BrokerPort
    Domain.OrderExecution.DemoRunEvaluation
    Domain.OrderExecution.DemoRunEvaluationFactory
    Domain.OrderExecution.Error
    Domain.OrderExecution.ExecutionIdempotencyPolicy
    Domain.OrderExecution.OrderExecutionFactory
    Domain.OrderExecution.ReasonCode
    Domain.OrderExecution.Specification
  build-depends:
    text           ^>=2.1.4,
    time           ^>=1.14,
    ulid           ^>=0.3.3,

executable execution
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    execution,
    aeson          ^>=2.2,
    servant-server ^>=0.20,
    warp           ^>=3.4,

test-suite execution-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    execution,
    hspec          ^>=2.11,
    text           ^>=2.1.4,
    time           ^>=1.14,
    ulid           ^>=0.3.3,
  other-modules:
    Domain.OrderExecution.AggregateSpec
    Domain.OrderExecution.BrokerExecutionPolicySpec
    Domain.OrderExecution.DemoRunEvaluationSpec
    Domain.OrderExecution.ExecutionIdempotencyPolicySpec
