cabal-version: 3.0
name:          execution
version:       0.1.0.0
build-type:    Simple

common shared
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
  ghc-options: -Wall
  build-depends: base >=4.20 && <5

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Domain.OrderExecution
    Domain.OrderExecution.Aggregate
    Domain.OrderExecution.BrokerExecutionPolicy
    Domain.OrderExecution.BrokerPort
    Domain.OrderExecution.DemoRunEvaluation
    Domain.OrderExecution.DemoRunEvaluationFactory
    Domain.OrderExecution.Error
    Domain.OrderExecution.ExecutionIdempotencyPolicy
    Domain.OrderExecution.OrderExecutionFactory
    Domain.OrderExecution.ReasonCode
    Domain.OrderExecution.Specification
    Infrastructure.ACL.BrokerT
    Infrastructure.Idempotency.ExecutionIdempotency
    Infrastructure.Publisher.PubSubExecutionEventPublisher
    Infrastructure.Repository.FirestoreIdempotencyRepository
    Infrastructure.Repository.FirestoreOrderExecutionRepository
    Infrastructure.Wire.ReasonCodeWire
    Presentation.Api
    Presentation.AppM
    Presentation.PubSubHandler
    UseCase.CompleteDemoRun
    UseCase.ExecuteOrder
  build-depends:
    aeson              ^>=2.2,
    bytestring         ^>=0.12,
    gogol              ^>=1.0,
    gogol-firestore    ^>=1.0,
    http-client        ^>=0.7,
    http-client-tls    ^>=0.3,
    http-types         ^>=0.12,
    servant-server     ^>=0.20,
    shared,
    text               ^>=2.1.4,
    time               ^>=1.14,
    transformers       ^>=0.6.1.2,
    ulid               ^>=0.3.3,
    unordered-containers ^>=0.2,
    warp               ^>=3.4,

executable execution
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    execution,
    shared,

test-suite execution-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    execution,
    aeson          ^>=2.2,
    base64         ^>=1.0,
    bytestring     ^>=0.12,
    hspec          ^>=2.11,
    http-client    ^>=0.7,
    http-types     ^>=0.12,
    shared,
    text           ^>=2.1.4,
    time           ^>=1.14,
    ulid           ^>=0.3.3,
  other-modules:
    Domain.OrderExecution.AggregateSpec
    Domain.OrderExecution.BrokerExecutionPolicySpec
    Domain.OrderExecution.DemoRunEvaluationSpec
    Domain.OrderExecution.ExecutionIdempotencyPolicySpec
    Infrastructure.ACL.BrokerTSpec
    Infrastructure.Publisher.PubSubExecutionEventPublisherSpec
    Infrastructure.Repository.FirestoreIdempotencyRepositorySpec
    Infrastructure.Repository.FirestoreOrderExecutionRepositorySpec
    Presentation.PubSubHandlerSpec
    UseCase.CompleteDemoRunSpec
    UseCase.ExecuteOrderSpec
