[project]
name = "feature-engineering"
version = "0.1.0"
description = "Feature Engineering service for alpha-mind"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0,<4",
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "scikit-learn>=1.5,<2",
    "lightgbm>=4.5,<5",
    "python-ulid>=3.0.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "mypy>=1.13,<2",
    "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["lightgbm.*", "sklearn.*", "ulid.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
